[package]
name = "modbus-master-simulation"
version = "0.1.0"
description = "A Tauri Modbus Master Simulator"
authors = ["you"]
edition = "2021"

[lib]
name = "modbus_master_simulation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp", "rtu", "server"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
